--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ header{
 
 
 .sobre {
-    background-image: url(../img/img-fundo.png);    
+    background-image: url(../img/img-fundo.jpg);    
     background-size: cover;
     background-repeat: no-repeat;
     height: 90vh;
